chore: updated .toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,13 @@
 [tool.poetry]
 name = "valopy"
+version = "0.1.0"
+description = "An API Wrapper for Valorant-API"
+authors = ["Jedddy <jedbalita25@gmail.com>"]
 readme = "README.md"
-packages = [{include = "valorant"}]
+license = "MIT"
+repository = "https://github.com/Jedddy/valopy"
+
+packages = [{include = "async_valorant"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
